avanzo circuitos/naviera, agrego metodo tiempo entre terminales